log
Thu May  5 15:07:23 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:15: error: ‘heapArray’ undeclared (first use in this function)
     return pq-heapArray[0]->data;
               ^~~~~~~~~
heap.c:21:15: note: each undeclared identifier is reported only once for each function it appears in
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
442a19b
Thu May  5 15:07:36 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
     return pq->heapArray[0]->data;
                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
598bb06
Thu May  5 15:07:49 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:14: error: ‘pq’ is a pointer; did you mean to use ‘->’?
     return pq.heapArray[0]->data;
              ^
              ->
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
9a841c4
Thu May  5 15:07:58 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
     return pq->heapArray[0]->data;
                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
0f1eaaf
Thu May  5 15:11:08 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:23: error: incompatible types when returning type ‘heapElem {aka struct nodo}’ but ‘void *’ was expected
   return pq->heapArray[0];
          ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
bce2b1a
Thu May  5 15:12:31 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:21:26: error: invalid type argument of ‘->’ (have ‘heapElem {aka struct nodo}’)
   return pq->heapArray[1]->data;
                          ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Compilation failed
67ba1fe
